--- a/task 10/index.html
+++ b/task 10/index.html
@@ -27,13 +27,7 @@
         <input class="btn" type="submit" value="Submit">
       </form>
 
-      <ul id="users"></ul>
-
-      <!-- <ul class="items">
-        <li class="item">Item 1</li>
-        <li class="item">Item 2</li>
-        <li class="item">Item 3</li>
-      </ul>  -->
+      <ul id="listOfUsers"></ul> 
     </section>
     
 
