--- a/task 10/index.html
+++ b/task 10/index.html
@@ -27,7 +27,7 @@
         <input class="btn" type="submit" value="Submit">
       </form>
 
-      <ul id="listOfUsers"></ul> 
+      <ul id="listOfUsers"</ul> 
     </section>
     
 
